name:                abstract-gl
version:             0.1.0.0
synopsis:            OpenGL abstractions.
description:         OpenGL abstractions. The library itself requires OpenGL 3.3.
homepage:            https://github.com/psandahl/abstract-gl#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2018 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AbstractGL
                     , AbstractGL.Backend
  other-modules:       AbstractGL.Backend.Program
                     , AbstractGL.Backend.Types
                     , AbstractGL.Backend.Upload
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , deepseq
                     , flow
                     , gl
                     , JuicyPixels
                     , JuicyPixels-extra
                     , linear
                     , stm
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psandahl/abstract-gl
